added styles, done header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;800;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./header.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./footer.css">
     <title>HTML Project</title>
 </head>
 <body>
@@ -16,25 +20,25 @@
                 <h1 class="header-title">NATALIE LAURSEN</h1>
               
                 <div class="links-content-box">
-                <a href="" class="home-link">Home</a>
+                <a href="#" class="home-link header-link">Home</a>
 
-                <a href="" class="about-link">About</a>
+                <a href="#" class="about-link header-link">About</a>
 
-                <a href="" class="marathone-link">Marathone</a>
+                <a href="#" class="marathone-link header-link">Marathone</a>
 
-                <a href="" class="contact-link">Contact</a>
+                <a href="#" class="contact-link header-link">Contact</a>
                 </div> 
 
             </nav>
 
             <div class="header-card">
 
-                <img src="" alt="">
+               <img src="./media/anons.png" class="anons-image" alt="">
 
                 <div class="card-content-box">
                     <h2>TAKE PART IN A 30-DAY DETOX MARATHON</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi nihil sapiente quam tempore exercitationem? Culpa perspiciatis sit accusantium, at dolores alias, assumenda explicabo odit nemo optio a. Nulla quia minima dignissimos quaerat.</p>
-                    <button class="button card-button"></button>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magam aliqua. Ut enim ad minim veniam</p>
+                    <button class="button card-button">i am interested</button>
 
                 </div>
             </div>
