did final clean up on css, did hover states and shit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -64,7 +64,10 @@
         <div class="content-section-box">
 
             <div class="content-item">
-                    <img src="./media/Rectangle 29banana.png" alt="" class="item-img">
+                <div class="item-img-container">
+                    <img src="./media/Banana.png" alt="" class="item-img">
+                    <div class="img-info-container"></div>
+                </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">the health benefits of bananas</h3>
                         <p class="item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita molestiae nihil labore illo ex magni tempora odit fugiat placeat maxime?</p>
@@ -73,7 +76,21 @@
             </div>
 
             <div class="content-item">
+                <div class="item-img-container">
                     <img src="./media/skiing.jpeg" alt="" class="item-img">
+                    <div class="img-info-container">
+                        <div class="img-date-info">
+                            <p>26</p>
+                            <p>January</p>
+                            <p>2020</p>
+                        </div>
+                        <div class="img-tag-info">
+                            <p>#tags</p>
+                            <p>#something</p>
+                            <p>#title</p>
+                        </div>
+                    </div>
+                </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">my first skiing expirience</h3>
                         <p class="item-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis hic a cumque soluta ipsam, eius maxime nisi sapiente placeat repudiandae.</p>
@@ -82,7 +99,10 @@
             </div>
             
             <div class="content-item">
-                    <img src="./media/Rectangle 29plants.png" alt="" class="item-img">
+                <div class="item-img-container">
+                    <img src="./media/Plants.png" alt="" class="item-img">
+                    <div class="img-info-container"></div>
+                </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">how indoor plants affect us</h3>
                         <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quibusdam atque ipsum, placeat distinctio neque ab laborum illum libero ratione.</p>
@@ -91,7 +111,10 @@
             </div>
 
             <div class="content-item">
-                    <img src="./media/Rectangle 29vegan-pizza.png" alt="" class="item-img">
+                <div class="item-img-container">
+                    <img src="./media/Vegan_Pizza.png" alt="" class="item-img">
+                    <div class="img-info-container"></div>
+                </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">simple homemade vegan pizza</h3>
                         <p class="item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, ex. Commodi impedit rerum quas temporibus corrupti atque, dicta blanditiis ut.</p>
@@ -100,7 +123,10 @@
             </div>
 
             <div class="content-item">
-                    <img src="./media/Rectangle 29office.png" alt="" class="item-img">
+                <div class="item-img-container">
+                    <img src="./media/Office.png" alt="" class="item-img">
+                    <div class="img-info-container"></div>
+                </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">top 5 apps for your productivity</h3>
                         <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eius vero quas laborum ipsum quae, inventore quia illo iure hic?</p>
@@ -116,27 +142,27 @@
         </div>
 
         </section> 
-        <section class="extra-section">
+        <div class="extra-section">
         <nav class="main-socials-nav">
-            <a href=""><img src="./media/facebookfacebook.png" class="icon facebook-icon" alt=""></a>
+            <a href=""><img src="./media/facebook.svg" class="icon facebook-icon" alt=""></a>
 
-            <a href=""><img src="./media/instagrampic.png" class="icon instagram-icon" alt=""></a>
+            <a href=""><img src="./media/instagram.svg" class="icon instagram-icon" alt=""></a>
 
-            <a href=""><img src="./media/youtube.png" class="icon youtube-icon" alt=""></a>
+            <a href=""><img src="./media/youtube.svg" class="icon youtube-icon" alt=""></a>
 
-            <a href=""><img src="./media/twitter.png" class="icon twitter-icon" alt=""></a>
+            <a href=""><img src="./media/twitter.svg" class="icon twitter-icon" alt=""></a>
 
-            <a href=""><img src="./media/pinterest.png" class="icon pinterest-icon" alt=""></a>
+            <a href=""><img src="./media/pinterest.svg" class="icon pinterest-icon" alt=""></a>
         </nav> 
         <div class="tag-cloud-container">
         <div class="tag-cloud">
             <h3>Tag cloud</h3>
-            <button class="tag-button"><p>#healthyfood</p></button>
-            <button class="tag-button"><p>#banana</p></button>
-            <button class="tag-button"><p>#coctails</p></button>
-            <button class="tag-button"><p>#vegan</p></button>
-            <button class="tag-button"><p>#yoga</p></button>
-            <button class="tag-button"><p>#makeuptutorial</p></button>
+            <button class="tag-button">#healthyfood</button>
+            <button class="tag-button">#banana</button>
+            <button class="tag-button">#coctails</button>
+            <button class="tag-button">#vegan</button>
+            <button class="tag-button">#yoga</button>
+            <button class="tag-button">#makeuptutorial</button>
 
         </div>
 
@@ -145,10 +171,10 @@
         </div>
         <div class="about-author">
             <h3 class="about-headline">About author</h3>
-            <img src="./media/Rectangle 36author.png" alt="">
+            <img src="./media/Author.png" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         </div>
-        </section>
+        </div>
         <nav class="page-nav">
             <a href=""><p> <img src="./media/Vectorleft-arrow.png" class="left-arrow" alt=""> previous </p></a>
 
@@ -174,8 +200,8 @@
         <h3>SUBSCRIBE AND DON'T MISS NEW ARTICLES</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
         <form class="subscription-form">
-            <input type="text" title="Name" placeholder="Name" class="name-input">
-            <input type="text" title="Email" placeholder="Email" class="email-input">
+            <input type="text" title="Name" placeholder="Name" class="name-input input">
+            <input type="text" title="Email" placeholder="Email" class="email-input input">
             <button class="submit">send</button>
         </form>
         </div>
@@ -183,15 +209,15 @@
     <section class="footer-socials-section">
         <div class="socials-content-box">
         <div class="author-info">
-            <img src="./media/Rectangle 36footer-pic.png" class="footer-pic" alt="">
+            <img src="./media/Footer_Pic.png" class="footer-pic" alt="">
             <h3>Natalie Laursen</h3>
         </div>
         <div class="footer-socials">
-            <a href=""><img class="footer-icon" src="./media/facebookfacebook.png" alt=""></a>
-            <a href=""><img class="footer-icon" src="./media/instagrampic.png" alt=""></a>
-            <a href=""><img class="footer-icon" src="./media/youtube.png" alt=""></a>
-            <a href=""><img class="footer-icon" src="./media/twitter.png" alt=""></a>
-            <a href=""><img class="footer-icon" src="./media/pinterest.png" alt=""></a>
+            <a href=""><img class="footer-icon" src="./media/facebook.svg" alt=""></a>
+            <a href=""><img class="footer-icon" src="./media/instagram.svg" alt=""></a>
+            <a href=""><img class="footer-icon" src="./media/youtube.svg" alt=""></a>
+            <a href=""><img class="footer-icon" src="./media/twitter.svg" alt=""></a>
+            <a href=""><img class="footer-icon" src="./media/pinterest.svg" alt=""></a>
         </div>
  
         </div>
