done media queries, added burger-menu, deleted a few unused pics

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <header class="header">
             <nav class="site-nav">
                 <h1 class="header-title">NATALIE LAURSEN</h1>
-              
+                        <input id="menu-toggle" type="checkbox" />
+                    <label class='menu-button-container' for="menu-toggle">
+                        <div class='menu-button'></div>
+                    </label>
                 <div class="links-content-box">
                 <a href="#" class="home-link header-link">Home</a>
 
@@ -188,7 +191,7 @@
 
             <a href=""><p>27</p></a>
 
-            <a href=""><p> next <img src="./media/Vectorright-arrow.png" class="right-arrow" alt=""> </p></a>
+            <a href="" class="next-page-btn"><p> next <img src="./media/Vectorright-arrow.png" class="right-arrow" alt=""> </p></a>
         </nav>
     </main>    
 
