forgot to add meta-text to pics

--- a/index.html
+++ b/index.html
@@ -69,7 +69,18 @@
             <div class="content-item">
                 <div class="item-img-container">
                     <img src="./media/Banana.png" alt="" class="item-img">
-                    <div class="img-info-container"></div>
+                    <div class="img-info-container">
+                                <div class="img-date-info">
+                            <p>26</p>
+                            <p>January</p>
+                            <p>2020</p>
+                        </div>
+                        <div class="img-tag-info">
+                            <p>#tags</p>
+                            <p>#something</p>
+                            <p>#title</p>
+                        </div>
+                    </div>
                 </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">the health benefits of bananas</h3>
@@ -104,7 +115,18 @@
             <div class="content-item">
                 <div class="item-img-container">
                     <img src="./media/Plants.png" alt="" class="item-img">
-                    <div class="img-info-container"></div>
+                    <div class="img-info-container">
+                                <div class="img-date-info">
+                            <p>26</p>
+                            <p>January</p>
+                            <p>2020</p>
+                        </div>
+                        <div class="img-tag-info">
+                            <p>#tags</p>
+                            <p>#something</p>
+                            <p>#title</p>
+                        </div>
+                    </div>
                 </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">how indoor plants affect us</h3>
@@ -116,7 +138,18 @@
             <div class="content-item">
                 <div class="item-img-container">
                     <img src="./media/Vegan_Pizza.png" alt="" class="item-img">
-                    <div class="img-info-container"></div>
+                    <div class="img-info-container">
+                                <div class="img-date-info">
+                            <p>26</p>
+                            <p>January</p>
+                            <p>2020</p>
+                        </div>
+                        <div class="img-tag-info">
+                            <p>#tags</p>
+                            <p>#something</p>
+                            <p>#title</p>
+                        </div>
+                    </div>
                 </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">simple homemade vegan pizza</h3>
@@ -128,7 +161,18 @@
             <div class="content-item">
                 <div class="item-img-container">
                     <img src="./media/Office.png" alt="" class="item-img">
-                    <div class="img-info-container"></div>
+                    <div class="img-info-container">
+                                <div class="img-date-info">
+                            <p>26</p>
+                            <p>January</p>
+                            <p>2020</p>
+                        </div>
+                        <div class="img-tag-info">
+                            <p>#tags</p>
+                            <p>#something</p>
+                            <p>#title</p>
+                        </div>
+                    </div>
                 </div>
                     <div class="item-text-box">
                         <h3 class="item-headline">top 5 apps for your productivity</h3>
