i have literally no idea what i did

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         <section class="content-section">
         <div class="content-sorter">
 
-        <button class="sorter-button" id="all-sorter">All (106)</button>
+        <button class="sorter-button all-sorter">All (106)</button>
         
-        <button class="sorter-button btn-selected" id="receipts-sorter">Receipts (32)</button>
+        <button class="sorter-button btn-selected receipts-sorter">Receipts (32)</button>
 
-        <button class="sorter-button" id="travelings-sorter">Travelings (4)</button>
+        <button class="sorter-button travelings-sorter">Travelings (4)</button>
 
-        <button class="sorter-button" id="health-sorter">Health (14)</button>
+        <button class="sorter-button health-sorter">Health (14)</button>
 
-        <button class="sorter-button" id="youga-sorter">Yoga (5)</button>
+        <button class="sorter-button youga-sorter">Yoga (5)</button>
 
         </div>
         <div class="content-section-box">
@@ -203,13 +203,14 @@
         <div class="tag-cloud-container">
         <div class="tag-cloud">
             <h3>Tag cloud</h3>
+            <div class="tags-container">
             <button class="tag-button">#healthyfood</button>
             <button class="tag-button">#banana</button>
             <button class="tag-button">#coctails</button>
             <button class="tag-button">#vegan</button>
             <button class="tag-button">#yoga</button>
             <button class="tag-button">#makeuptutorial</button>
-
+            </div>
         </div>
 
             <a href="" class="item-link tag-link">See more</a>
